テンポのスピナー搭載 サーフェスビュー再描画ができておらず、頂点座標が正しく描けていない。 改訂を行う前に保存する、ただし現在もエラーがメインに出ている。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutParent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:ignore="ExtraText">
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guidelineH1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.1" />
-
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guidelineH2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
-
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
+        android:id="@+id/guidelineV1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
+        android:id="@+id/guidelineV2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -39,42 +50,112 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@id/guideline3"
-        app:layout_constraintEnd_toEndOf="@id/guideline5"
-        app:layout_constraintStart_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toTopOf="@id/guideline2">
+        app:layout_constraintBottom_toBottomOf="@id/guidelineH2"
+        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
+        app:layout_constraintStart_toStartOf="@id/guidelineV1"
+        app:layout_constraintTop_toTopOf="@id/guidelineH1">
+
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btnView"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="開始"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnTrajectory"
+        android:text="@string/tapToStart"
+        android:gravity="end"
+        app:layout_constraintTop_toTopOf="@id/guidelineH2"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"/>
+    ////　上段　////////////////////////////////////////////////
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:text="@string/lower"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        android:padding="0dp"/>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:text="@string/tinyLower"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintEnd_toStartOf="@+id/spn_tempo_1"
+        android:padding="0dp"/>
+    <Spinner
+        android:id="@+id/spn_tempo_1"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:background="#fff"
+        android:backgroundTint="#2F313C"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/spn_tempo_2"
+        android:padding="0dp"/>
+    <Spinner
+        android:id="@+id/spn_tempo_2"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:background="#fff"
+        android:backgroundTint="#2F313C"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/spn_tempo_1"
+        app:layout_constraintEnd_toStartOf="@+id/button3"/>
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:text="@string/tinyHigher"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/spn_tempo_2"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        android:padding="0dp"/>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:text="@string/higher"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="0dp"/>
+    ////　下段　////////////////////////////////////////////////
+    <Spinner
+        android:id="@+id/spnBeat"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:background="#fff"
+        android:backgroundTint="#2F313C"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnGravity"
+        android:textAlignment="center"/>
 
     <Button
-        android:id="@+id/btnTrajectory"
+        android:id="@+id/btnGravity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="軌跡"
+        android:text="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btnStop"
-        app:layout_constraintStart_toEndOf="@+id/btnView"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintEnd_toStartOf="@+id/btnStop"
+        app:layout_constraintStart_toEndOf="@+id/spnBeat"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH4" />
     <Button
         android:id="@+id/btnStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="終了"
+        android:text="sound"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnTrajectory"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
-
-
-
+        app:layout_constraintStart_toEndOf="@+id/btnGravity"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
