打点下に■を描くところまで。 グラデーションを■とドットで分けたいので、現在ユニフォームとして画面全体に与えているcolorをドットの頂点に適用する。 それに先立ち、頂点情報をFIXさせるためglDrawArraysのGL_TRIANGLESからGL_TRIANGLE_FUNに変更する。 失敗の可能性があるため、一旦保管する。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
         android:id="@+id/tv_motion_y_disc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="motion y\nタクトの跳ね具合\n大きいほど\nレッジェーロ"
+        android:text="跳ねる\n勢い"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
         app:layout_constraintStart_toEndOf="@+id/spnBeat"
@@ -125,6 +125,26 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineH3"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
         app:layout_constraintStart_toEndOf="@+id/tv_motion_y_disc"
+        app:layout_constraintEnd_toStartOf="@id/spn_dot_size_disc"/>
+    <TextView
+        android:id="@+id/spn_dot_size_disc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="球の\n大きさ"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/spnMotionY"
+        app:layout_constraintEnd_toStartOf="@+id/spn_dot_size"/>
+
+    <Spinner
+        android:id="@+id/spn_dot_size"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:background="#fff"
+        android:backgroundTint="#2F313C"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH3"
+        app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintStart_toEndOf="@+id/spn_dot_size_disc"
         app:layout_constraintEnd_toEndOf="parent"/>
     ////　下段　////////////////////////////////////////////////
     <TextView
@@ -150,7 +170,7 @@
         android:id="@+id/tv_gradation_disc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="残像\n小さい程\n早く薄くなる"
+        android:text="残像の\n長さ"
         app:layout_constraintTop_toTopOf="@+id/guidelineH4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spnRadius"
