--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -4,8 +4,10 @@
     style="?attr/spinnerDropDownItemStyle"
     android:singleLine="true"
     android:layout_width="match_parent"
-    android:layout_height="25dp"
+    android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:padding="0dp"
     android:ellipsize="marquee"
-    android:gravity="center_horizontal"
+    android:backgroundTint="@android:color/white"
+    android:gravity="center"
+    android:fontFamily="@font/playfair_regular"
     android:textColor="@android:color/white" />
